--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Markussim/cpu-socket#readme",
   "dependencies": {
+    "diskusage": "^1.1.3",
     "express": "^4.17.1",
     "nodemon": "^2.0.6",
     "os": "^0.1.1",
