--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "dependencies": {
     "diskusage": "^1.1.3",
     "express": "^4.17.1",
+    "node-os-utils": "^1.3.2",
     "nodemon": "^2.0.6",
     "os": "^0.1.1",
     "os-utils": "0.0.14",
-    "socket.io": "^3.0.3"
+    "socket.io": "^3.0.3",
+    "systeminformation": "^4.30.1"
   }
 }
